# ChangeLog for xfce-base/libxfcegui4
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfcegui4/ChangeLog,v 1.125 2009/04/21 04:24:59 darkside Exp $

*libxfcegui4-4.6.1 (21 Apr 2009)

  21 Apr 2009; Jeremy Olexa <darkside@gentoo.org> -libxfcegui4-4.6.0.ebuild,
  +libxfcegui4-4.6.1.ebuild:
  Version bump for xfce-4.6.1 release, remove old

  22 Mar 2009; Christoph Mende <angelos@gentoo.org>
  libxfcegui4-4.6.0.ebuild:
  Bumped gtk+ dependency to 2.10

  13 Mar 2009; Raúl Porcel <armin76@gentoo.org> libxfcegui4-4.4.3.ebuild,
  libxfcegui4-4.6.0.ebuild:
  Add ~sh

*libxfcegui4-4.6.0 (10 Mar 2009)

  10 Mar 2009; Christoph Mende <angelos@gentoo.org>
  +libxfcegui4-4.6.0.ebuild:
  Xfce-4.6 bump

  22 Dec 2008; Christoph Mende <angelos@gentoo.org>
  -libxfcegui4-4.4.2.ebuild:
  Removed old

  15 Dec 2008; Jeroen Roovers <jer@gentoo.org> libxfcegui4-4.4.3.ebuild:
  Stable for HPPA (bug #249942).

  13 Dec 2008; Raúl Porcel <armin76@gentoo.org> libxfcegui4-4.4.3.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #249942

  08 Dec 2008; Brent Baude <ranger@gentoo.org> libxfcegui4-4.4.3.ebuild:
  Marking libxfcegui4-4.4.3 ppc64 stable for bug 249942

  06 Dec 2008; Jeremy Olexa <darkside@gentoo.org> libxfcegui4-4.4.3.ebuild:
  amd64 stable, bug 249942

  06 Dec 2008; nixnut <nixnut@gentoo.org> libxfcegui4-4.4.3.ebuild:
  Stable on ppc wrt bug 249942

  06 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +files/libxfcegui4-4.4.3-64bit-warning.patch, libxfcegui4-4.4.3.ebuild:
  Fix a warning that would otherwise make the build fail with USE=debug, bug
  245142

*libxfcegui4-4.4.3 (30 Oct 2008)

  30 Oct 2008; Christoph Mende <angelos@gentoo.org>
  +libxfcegui4-4.4.3.ebuild:
  Xfce-4.4.3 bump

  04 May 2008; Samuli Suominen <drac@gentoo.org> libxfcegui4-4.4.2.ebuild:
  Remove -Werror from configure.

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> libxfcegui4-4.4.2.ebuild:
  Stable for HPPA (bug #201747).
