@@ -1,7 +1,7 @@
 AUX libxfcegui4-4.4.3-64bit-warning.patch 577 RMD160 50362fc361d3f4f4001d68349840176a745d40e9 SHA1 4d76caf91619bc749a3f700aa9accf385ed3e97b SHA256 991c444d001b7c1bad5e3fa1b7ec20321593b79ecf0acef6e2b40b63910e43a6
 DIST libxfcegui4-4.4.3.tar.bz2 621245 RMD160 c0155a89e35d88d3c2e25fc2f38630309d50e916 SHA1 4f1ab2fb035b0aaeb01cbef15d7378726037bcc9 SHA256 8f45bc2ca5e9575b1b1d7f050ee70bdb9de16a35ca2f6838795e9f617343bb23
 DIST libxfcegui4-4.6.1.tar.bz2 650666 RMD160 295263f3e8a6bbcea05ce5ae8ab0f3a9cf1e4568 SHA1 82bcfe74dd3b9188b9f41d8fa7dc4a8481461696 SHA256 3468a9cb348bf54f8a0afa386366683eff1987b722d2e81326f9e7ec7dfbe093
-EBUILD libxfcegui4-4.4.3.ebuild 864 RMD160 3d60fdf8980d28a19ee81c7e9e1f6200d48892bd SHA1 837f034958f415bccc606d0b319c4faf71200f56 SHA256 80a5592f4d60913bfbf3707c96dfceb4ba7bd05cbb7ccaddc41c9c68d1e116b6
-EBUILD libxfcegui4-4.6.1.ebuild 873 RMD160 ed744ff42d29686e528c6105a9d61968e3ad8a10 SHA1 deabd5fb4cb79663187c6961089be1128fb163db SHA256 a68bceaf8aaabc1873a0e6e62fc0806bb226048083e64dfe6e9de9754f0165dc
-MISC ChangeLog 15362 RMD160 1b23c2bcb90abcae11ac23c176c42318c73d580f SHA1 291e4b789aeeeaedbbd0a6a48d68769339d082a1 SHA256 2cc8380e96590fcf14594c8327850a391ef52c5b00c581f0839a8ff62e835b34
+EBUILD libxfcegui4-4.4.3.ebuild 881 RMD160 888b9d9e7007fccb6f21051f8265934ba340a30a SHA1 673b8336ceaa45a0e4e4fadc40c24c606b4d8b78 SHA256 e7fbdcdb903ef1b58840a1cb3489429366d0b4e380e88b6c7ff0fa0c84f59542
+EBUILD libxfcegui4-4.6.1.ebuild 889 RMD160 ebc1f79a0fcb09f413e65b953a589b9a07feda3e SHA1 c7dc5aac1fe51c552e59acf10042b512c24310b2 SHA256 1b3b2489c12e80dbb7067533ac2f145bba533b8f2973534fcb0103177bc1779c
+MISC ChangeLog 15498 RMD160 1f856d831f9781b4b1ff81c5ea7561e18ecb8afe SHA1 a5ebce254ca4360c331e8a3719e4200d402f7b0e SHA256 2fbe3f1ec854c51f3001a1a5d40db142b17b6e32bbd12f69b4a2a06c2a200110
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
