@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfcegui4/libxfcegui4-4.4.3.ebuild,v 1.8 2009/03/13 10:18:44 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfcegui4/libxfcegui4-4.4.3.ebuild,v 1.9 2009/05/21 20:08:05 angelos Exp $
 
 inherit eutils xfce44
 
@@ -12,6 +12,7 @@ xfce44_core_package
 DESCRIPTION="Unified widgets library"
 HOMEPAGE="http://www.xfce.org/projects/libraries"
 KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x64-solaris ~x86-solaris"
+LICENSE="LGPL-2"
 IUSE="debug doc startup-notification"
 
 RDEPEND="x11-libs/libSM
