@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfcegui4/libxfcegui4-4.6.1.ebuild,v 1.1 2009/04/21 04:24:59 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/libxfcegui4/libxfcegui4-4.6.1.ebuild,v 1.2 2009/05/21 20:08:05 angelos Exp $
 
 EAPI="1"
 
@@ -11,6 +11,7 @@ xfce4_core
 DESCRIPTION="Unified widgets library"
 HOMEPAGE="http://www.xfce.org/projects/libraries"
 KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x64-solaris ~x86-solaris"
+LICENSE="LGPL-2"
 IUSE="debug doc startup-notification"
 
 RDEPEND="gnome-base/libglade
